ui(css): fix image alignment

--- a/css/main.css
+++ b/css/main.css
@@ -139,8 +139,10 @@ p {
 }
 
 p img {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 	max-width: 100%;
-	text-align: center;
 }
 
 section {
